After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745239 - g_property_action_new missing type annotation
g_property_action_new missing type annotation
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal minor
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-02-26 18:24 UTC by Evan Nemerson
Modified: 2015-02-26 18:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GPropertyAction: add type annotation to constructor's object argument (881 bytes, patch)
2015-02-26 18:24 UTC, Evan Nemerson
committed Details | Review

Description Evan Nemerson 2015-02-26 18:24:06 UTC
Created attachment 298016 [details] [review]
GPropertyAction: add type annotation to constructor's object argument

The object argument is a gpointer in C, but it must be a GObject in reality so there should be a (type GObject.Object) annotation.
Comment 1 Allison Karlitskaya (desrt) 2015-02-26 18:48:27 UTC
Review of attachment 298016 [details] [review]:

thanks